# coursework

./: .env.example  README.md  main.py  pyproject.toml
src/: decorators.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
