[tool.poetry]
name = "coursework"
version = "0.1.0"
description = ""
authors = ["Ivan <zhirnovivan1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytz = "^2024.2"
views = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
